Update docmosis code to comma seperate R's